# mjolnirscan

./: README.md  environment.yml  pyproject.toml
src/mjolnirscan/: __init__.py  cli.py  scanner.py
